# payguard-agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  README_HF.md  main.py  pyproject.toml  requirements-demo.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: agent.py  ui.py
src/policies/: rate_limit_policy.py  spend_limit_policy.py  time_window_policy.py  whitelist_policy.py
