[project]
name = "payguard-agent"
version = "0.1.0"
description = "Policy-constrained payment agent on Hedera — 4 custom policies + HCS audit trail"
requires-python = ">=3.10"
dependencies = [
    "hedera-agent-kit>=3.0.0",
    "hiero-sdk-python",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-groq>=0.2.0",
    "langgraph>=0.2.0",
    "gradio>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
